plugins {
    id 'java'
}

group = 'com.uop'
version = '1.0.0'

repositories {
    maven { name = 'papermc'; url = 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT'
}

java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

processResources {
    filesMatching('plugin.yml') {
        expand(version: project.version)
    }
}
